# datanest-workspace

./: README.md  pyproject.toml
datanest-dev-features/common/src/common/: evaluate_new_features_v0.py  evaluate_new_features_v1.py
datanest-dev-features/device/version3/clean_tac_mapping/: curated_tac_imei.csv  curated_tac_imei_cleaned_v1.csv  device_brand_model_mapping.py
datanest-dev-features/device/version3/configs/: experiment_config.device_imei.json  experiment_config.device_tac_behaviour.json  experiment_config.nid.json
datanest-dev-features/device/version3/notebooks/: 0_1_sample_preparation.ipynb  1_1_build_device_imei_features.ipynb  (+6 more)
datanest-dev-features/external_sources/calendar_sources/: holiday_features.py  holiday_features_notebooks.py  vietnam_holidays_2020_2025.csv
datanest-dev-features/location/expand_province_mapping/: 0_sample_data.py  1_select_seed_prov_top1_2_rank_logs_3d.py  2_gen_seed_1m_v2.py  3_agg_cell_stat_1y.py  3_agg_cnt_cell_date_1y.py  3_gen_seed_stat_1y.py  4_agg_seed_report.py
datanest-tools/: type_clipboard.py
datanest-tools/client_model_tracking/: client_model_tracking_v2.xlsx  usage_examples.py
datanest-tools/client_model_tracking/chunks/: manifest.txt  part_00.txt  part_01.txt  part_02.txt  part_03.txt  part_04.txt  part_05.txt  part_06.txt  part_07.txt  part_08.txt  part_09.txt  part_10.txt  part_11.txt  part_12.txt  part_13.txt  part_14.txt  part_15.txt  part_16.txt  part_17.txt  part_18.txt  part_19.txt
datanest_dev_features/location/expand_province_mapping/: 3_agg_cell_pn_1y.py  3_agg_cell_ref_cell_1y.py
datanest_dev_features/vtm/: 01_active_vtp_weekly_get_latest.py  02_active_vtp_account_fts_weekly.py  02_active_vtp_bank_fts_weekly.py  03_active_vtp_bank_acc_fts_weekly.py
datanest_tools/: encode_file_to_send.py
datanest_tools/client_model_tracking/: tracking.py
dev-features/: pyproject.toml
dev_fts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+67 files in other folders)
