[project]
name = "dev_fts"
version = "0.1.4"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "duckdb>=1.4.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.8.0",
    "catboost>=1.2.10",
]

[project.scripts]
autotype = "datanest-tools.type_clipboard:main"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
